Fix alignment of facet constraint value (#5870)

--- a/app/assets/stylesheets/components/buttons.scss
+++ b/app/assets/stylesheets/components/buttons.scss
@@ -231,10 +231,3 @@ button.checkbox.bookmark_all {
   outline-offset: 0 !important;
 }
 
-.applied-filter .filter-name:after {
-  font-family: FontAwesome;
-  color: #777777;
-  content: "\f054";
-  font-size: 70%;
-  padding-left: 5px;
-}
